QQuickMonthGrid: fix touch support

QQuickMonthGrid lost its clicked() signal when multi-touch support was
added to QQuickControl, because QQuickControl now accepts touch events
and therefore QQuickMonthGrid no longer gets synthesized mouse events.
Re-implement QQuickControlPrivate::handlePress/Move/Release/Ungrab()
instead of QQuickControl::mouseXxxEvent() to gain multi-touch support.

Task-number: QTBUG-61585
Change-Id: Ic6fb2ea0b43b2b44beb0d8fdd3335a20f7c028f6
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>